@@ -18,6 +18,7 @@ import com.dnd.namuiwiki.domain.statistic.StatisticsService;
 import com.dnd.namuiwiki.domain.statistic.model.BorrowingLimitEntireStatistic;
 import com.dnd.namuiwiki.domain.statistic.model.Statistics;
 import com.dnd.namuiwiki.domain.statistic.model.entity.PopulationStatistic;
+import com.dnd.namuiwiki.domain.survey.model.entity.Survey;
 import com.dnd.namuiwiki.domain.survey.type.Period;
 import com.dnd.namuiwiki.domain.survey.type.Relation;
 import com.dnd.namuiwiki.domain.user.UserRepository;
@@ -26,14 +27,17 @@ import com.dnd.namuiwiki.domain.wiki.WikiType;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class DashboardService {
     private final UserRepository userRepository;
     private final DashboardRepository dashboardRepository;
+    private final DashboardInternalProxyService dashboardInternalProxyService;
     private final StatisticsService statisticsService;
     private final QuestionRepository questionRepository;
 
@@ -43,6 +47,21 @@ public class DashboardService {
         User user = findByWikiId(tokenUserInfoDto.getWikiId());
         Optional<Dashboard> dashboard = dashboardRepository.findByUserAndWikiTypeAndPeriodAndRelation(user, wikiType, period, relation);
         return dashboard.map(value -> convertToDto(value.getStatistics(), period, relation)).orElse(null);
+    }
+
+    public void updateDashboards(Survey survey) {
+        User owner = survey.getOwner();
+        WikiType wikiType = survey.getWikiType();
+        Period period = survey.getPeriod();
+        Relation relation = survey.getRelation();
+
+        var answers = survey.getAnswers().stream()
+                .filter(answer -> answer.getQuestion().getDashboardType().getStatisticsType().isNotNone())
+                .toList();
+
+        dashboardInternalProxyService.updateDashboard(owner, wikiType, null, null, answers);
+        dashboardInternalProxyService.updateDashboard(owner, wikiType, period, null, answers);
+        dashboardInternalProxyService.updateDashboard(owner, wikiType, null, relation, answers);
     }
 
     private DashboardDto convertToDto(Statistics statistics, Period period, Relation relation) {
@@ -67,7 +86,7 @@ public class DashboardService {
                     } else {
                         throw new ApplicationErrorException(ApplicationErrorType.INVALID_DASHBOARD_TYPE);
                     }
-                }).toList();
+                }).sorted(Comparator.comparingLong(DashboardComponentV2::getDashboardOrder)).collect(Collectors.toList());
 
         return new DashboardDto(dashboardComponents);
     }
